fixed spacing on software modal

--- a/infocenter/src/App.css
+++ b/infocenter/src/App.css
@@ -1554,7 +1554,7 @@ html {
 }
 
 .software-summary:first-of-type {
-  margin-top: 75px;
+  margin-top: 55px;
 }
 
 .software-summary:nth-of-type(2) {
